--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "start": "nodemon src/index.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "mongoose": "^5.3.10",
     "socket.io": "^2.1.1"
