--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,12 +7,12 @@ services:
     ports:
       - 3000:3000
     command: bash -c "cd /backend && yarn install && yarn run start"
-  frontend:
-    image: node:10.13.0
-    volumes:
-      - ./frontend:/frontend
-    ports:
-      - 3001:3000
-    command: bash -c "cd /frontend && yarn install && yarn start"
-    depends_on:
-      - backend
+  # frontend:
+  #   image: node:10.13.0
+  #   volumes:
+  #     - ./frontend:/frontend
+  #   ports:
+  #     - 3001:3000
+  #   command: bash -c "cd /frontend && yarn install && yarn start"
+  #   depends_on:
+  #     - backend
